--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "~3.2.1",
     "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-uglify": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-lesslint": "^1.1.13",
     "load-grunt-configs": "^0.4.1",
